gl_gl_api_implementation: Check API type instead of null fnptr

Some EGL implementation expose deprecated Desktop GL function on GL ES
contexts. RealGLApi would call them and cause a GL_INVALID_OPERATION
because the function is deprecated in core profile.

TBR=jbauman@chromium.org
BUG=686856

Review-Url: https://codereview.chromium.org/2664123003
Cr-Commit-Position: refs/heads/master@{#447368}

Former-commit-id: da5b2007a9f0cc0193958f7e2f50fe8847ce1892